# voice-stall

./: .gitignore  AGENTS.md  CHANGELOG.md  CONDUCTOR_TUTORIAL.md  CONTRIBUTING.md  HISTORIAL_CAMBIOS.md  README.md  REDESIGN_PYSIDE6_2026.md  app_storage.py  config.default.json  config.json  crear_acceso_directo.ps1  crear_acceso_directo_v2.ps1  criticas_ejecucion.md  dictation_service.py  documentacion.md  engine.py  investigacion_stt.md  main.py  main_qt.py  plan_implementacion.md  pyproject.toml  python_backend.py  recorder.py  start_voz.cmd  start_voz_qt.cmd  start_voz_silent.vbs  start_voz_tauri.cmd  start_voz_tauri.ps1  start_voz_tauri_silent.vbs  transcription_models.py
.github/workflows/: ci.yml
benchmarks/: benchmark_latest.json  benchmark_latest.md  run_benchmark.py
benchmarks/archive/: benchmark_2026-02-27.json  benchmark_2026-02-27.md
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/legacy_cleanup_20260228/: plan.md  spec.md
conductor/archive/tauri_migration_20260228/: index.md
conductor/tracks/001-add-unit-tests/: metadata.json  plan.md  spec.md
conductor/tracks/002-model-selection/: metadata.json  plan.md  spec.md
conductor/tracks/fix_app_path_20260313/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/fix_ui_accents_20260313/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/frontend_enhancements_20260313/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/legacy_cleanup_20260228/: index.md  metadata.json  plan.md
conductor/tracks/tauri_migration_20260228/: metadata.json  plan.md  spec.md
conductor/tracks/visual_improvements_20260228/: index.md  metadata.json  plan.md  spec.md
docs/: framework_evaluation_2026-02-27.md  framework_modification_evaluation_2026-02-27.md  model_language_guide.md
docs/archive/: framework_evaluation_2026-02-27.md  framework_modification_evaluation_2026-02-27.md
tauri-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/scripts/: ensure-dev-port.mjs
tauri-app/src/: App.tsx  FloatingPill.test.tsx  FloatingPill.tsx  HistoryCopy.test.tsx  HistoryItem.tsx  api.ts  encoding.test.ts  opalescent.test.ts  styles.css  styles.test.ts  types.ts  typography.test.ts  ui_components.test.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: main.rs  sidecar.rs
tests/: test_app_storage.py  test_dictation_service.py  test_engine.py  test_hotkey_robustness.py  test_main_qt_flow.py  test_python_backend.py  test_recorder.py
v1/: config.json  crear_acceso_directo.ps1  start_voz.cmd
