[project]
name = "voice-stall"
version = "2.0.0"
description = "Aplicación local de dictado por voz para Windows con faster-whisper y pegado automático."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy<2.1.0",
    "pillow>=12.1.0",
    "PySide6>=6.8.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "torch==2.5.1",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"
