[project]
name = "voice-stall"
version = "2.0.0"
description = "Aplicación local de dictado por voz para Windows con faster-whisper y pegado automático."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy<2.1.0",
    "pillow>=12.1.0",
    "PySide6>=6.8.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "requests>=2.32.5",
    "torch==2.5.1",
]

# Índice CUDA 12.1 para Windows (GPU local)
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Índice CPU para CI / Linux / macOS
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# En Windows resuelve torch desde el índice CUDA; en el resto desde CPU
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu",   marker = "sys_platform != 'win32'" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"
