[package]
name = "voice-stall-tauri"
version = "0.1.0"
description = "Voice Stall Tauri shell"
authors = ["voice-stall"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-clipboard-manager = "2.0.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
